# ics_cobraOps

./: .gitignore  README.md  pyproject.toml  setup.py
doc/: Makefile  make.bat
doc/source/: conf.py  index.rst
matlab/: AutogenerateMotorMaps.m  S1CentersGroupAnlys.m  S1CentersGroupAnlys_CIT.m  S2CentersGroupAnlys.m  S2CentersGroupAnlys_CIT.m  S2Centers_analyze.m  TargetConvergenceNearestDistance.m  a2014_03_27_flowrateCalibration.m  a2014_05_01_automated_streak_calibration.m  addRefPos2xml.m  adjustMaps.m  adjustMapsJoeEdit.m  alphabetaplots.m  analyzeDamping.m  analyzeTC.m  analyzeTC_CIT.m  analyzeTC_CIT_b.m  analyzeTC_CIT_joesPlayground.m  analyzeTC_Joe.m  analyzeTargetRun.m  benchmark.lst  calcRailSNR.m  calcSNR.m  centerScriptGenerator.m  checkLogFile.m  checkTargetRunCentroiding.m  chooseOntimes.m  chooseOntimesManually.m  cobraCfg2xml.m  compareMotorMaps.m  createCentersLinkLengths.m  createMotorMap.m  createTargetConvergenceStats.m  dailyBnchmrkAnalysis.m  extract_stationary_fibers.m  fiducialStudy.m  fiducialStudyFirst.m  filterTestData.m  findStickySpots.m  fixPhiMapEnd.m  (+62 more)
matlab/.archive/: AutofindOntimes.m  a2014_03_26_AutogenerateMotorMaps.m  a2014_03_26_AutogenerateMotorMaps_charliefingaround.m  a2014_05_28_AutofindOntimes.m  a2014_06_11_AutofindOntimes.m  analyzeTC_cm1.m  array2text.m  avoid_cell_arrays_if_you_can.m  calcSNRcm1.m  comet.m  convCompare.m  flipCnfg.m  getUpdateVector.m  getcentroids_phm.m  renameFidFiles.m  targGenerator.m  targGeneratorNew.m
matlab/Target_Lists/collding1.5newnew/: TargetList_mId_1_pId_27.txt  TargetList_mId_1_pId_7.txt
matlab/Target_Lists/colliding1.5/: TargetList_mId_1_pId_13.txt  TargetList_mId_1_pId_15.txt  TargetList_mId_1_pId_17.txt  TargetList_mId_1_pId_25.txt  TargetList_mId_1_pId_27.txt
matlab/Target_Lists/colliding1.5new/: TargetList_mId_1_pId_05.txt  TargetList_mId_1_pId_15.txt  TargetList_mId_1_pId_17.txt  TargetList_mId_1_pId_19.txt  TargetList_mId_1_pId_21.txt  TargetList_mId_1_pId_23.txt
matlab/Target_Lists/collidingNew/: TargetList_mId_1_pId_17.txt  TargetList_mId_1_pId_25.txt  TargetList_mId_1_pId_27.txt  TargetList_mId_1_pId_5.txt
matlab/Target_Lists/dens1.0/: TargetList_mId_1_pId_1.txt  TargetList_mId_1_pId_19.txt  TargetList_mId_1_pId_33.txt  TargetList_mId_1_pId_39.txt  TargetList_mId_1_pId_41.txt  TargetList_mId_1_pId_7.txt
matlab/Target_Lists/dens1.5/: TargetList_mId_1_pId_13.txt  TargetList_mId_1_pId_15.txt  TargetList_mId_1_pId_35.txt  TargetList_mId_1_pId_41.txt  TargetList_mId_1_pId_5.txt  TargetList_mId_1_pId_7.txt
matlab/Target_Lists/repeat103_1.5/: TargetList_mId_1_pId_11.txt  (+2 more)
matlab/collisions/: CalcDistanceMatrix.m  HOWTO_ETS+simFun.ppt  Notes_on_Maps_and_Noise.pptx  README.org  TargetList_mId_1_pId_3.txt  XY2TP.m  addNoise.m  animateTraj.m  assign_targets.m  collision distance distribution.fig  defineBenchGeometry.m  demo.m  detectCollisionsSparse.m  gedanken.m  generateCollidingTargets.m  generateFieldTargets.m  generateTargets.m  generateTrajectory (Johannes Groß's conflicted copy 2015-12-02).m  generateTrajectory.m  generateTrajectory2.m  getCentersRails.m  getTargetsFromTargetList.m  mapFactor.m  miniresim.m  modifyTrajectory.m  pt2linesegment.m  realizeTrajectory2.m  resimulate.m  showCollision.m  showMovement.m  showMovementAfterSim.m  showMovementNN.m  simFun.m  simFunInv.m  simFun_v1.0.m  stow_cobras.m  test_collisions.m  test_genTraj.m  thtdir_comparo.m  victim_map.m
matlab/download/: cfresize.m  circlefinder.m  extractcircles.m  houghtransform.m  nonmaxsup1d.m
matlab/lib/: NumArr2mMapStr.m  S1CentersAnlys.m  S1CentersAnlys_CIT.m  S2CentersAnlys.m  S2CentersAnlys_CIT.m  allstats.m  appendLegend.m  applyHorns.m  assignCntrds2Cobras.m  circle.m  cobraArmAngles.m  cobraCircle.m  compressAVI.m  dir2cell.m  existingFigure.m  getARMval.m  getAVI.m  getCentroidsFromFolder.m  getCntrdsFromImage.m  getJ1angles.m  getLegendHandle.m  getMMap.m  getS1Center.m  getS1CentersFromMsim.m  getS2Center.m  horn87.m  hornarray.m  imgGetCntrds.m  imgJointAngles.m  loadCfgXml.m  loadPrevious.m  loadmats.m  mMapStr2NumArr.m  motorMap.m  plotFibers.m  plotcircle.m  processCentroidLog.m  processTargetLog.m  readrawcats.m  setARMval.m  (+4 more)
matlab/testcode/: fitconfintervals.m  horn_example1.m
python/: setup.py
python/ics/: setup.py
(+274 files in other folders)
