[project]
name = "ics-cobraOps"
readme = "README.md"
authors = [{ name = "Javier Gracia Carpio", email = "jgracia@mpe.mpg.de" }]
requires-python = ">=3.9"
description = "A pacakage that simulates the movements of cobras and calculates their possible collisions"
license = "GPL-3.0"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "ics-cobraCharmer @ git+https://github.com/Subaru-PFS/ics-cobraCharmer.git",
  "pfs-instdata @ git+https://github.com/Subaru-PFS/pfs-instdata.git@tickets/INSTRM-2729",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Subaru-PFS/ics_cobraOps/"

[tool.hatch.metadata]
allow-direct-references = true

[tool.setuptools]
package-dir = { "" = "python" }

[tool.setuptools.packages.find]
where = ["python"]
namespaces = true

[tool.setuptools.dynamic]
version = { attr = "ics.cobraOps.__version__" }
